--- a/style/mobile.css
+++ b/style/mobile.css
@@ -5,10 +5,10 @@
         padding: 0;
     }
 
-    body {
+    /* body {
         padding: 2px;
         margin: 2px;
-    }
+    } */
 
     header {
         position: relative;
