--- a/style/mobile.css
+++ b/style/mobile.css
@@ -3,39 +3,45 @@
     * {
         margin: 0;
         padding: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
-    /* body {
-        padding: 2px;
-        margin: 2px;
-    } */
+    body {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        background: #FFF2F2;
+    }
 
-    header {
+    a {
+        border: none;
+        border-bottom: none;
+    }
+    
+    .header-grid {
         position: relative;
-        background-color: black;
-        color: white;
         display: flex;
         align-items: center;
+        margin-left: 0.2rem;
+        margin-top: 1px;
         justify-content: space-between;
-        top: -2px;
-        width: 100%;
+        padding:8px 20px;
+        background-color: black;
+        color: #fff;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     }
+
 
     .header-first-div {
         display: flex;
-        background-color: black;
+        align-items: center;
+        justify-content: center;
+        gap: 8px;
     }
 
-    .header-first-div  div {
-        display: flex;
-        align-items: center;
-        width: 6rem;
-    }
 
     .header-first-div  div img {
-        background-color: black;
-        margin-left: 3px;
-    }
+       width: 70px;
+       height: 42px;
+    } 
 
     .icons {
         width: 1.5rem;
@@ -43,7 +49,7 @@
 
     .bar {
         color: red;
-        width: 1.8rem;
+        width:1.7rem;
     }
 
     .arrow-down {
@@ -77,7 +83,15 @@
     }
 
     .header-second-div div div p {
-        font-weight: bold;
+        color: #FFF;
+
+        /* caption */
+        font-family: Roboto;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 0.048px;
     }
 
     /* first section */
@@ -102,13 +116,14 @@
         border-radius: 0.4rem;
         padding-top: 0;
         padding: 8px;
-        justify-content: center;
-        width: 80%;
+        width: 90%;
+        height: 45px;
         margin: 6rem auto;
     }
 
     .first-section div div input {
         width:90%;
+        font-size: 1rem;
         padding: 8px;
         outline: none;
         border: none;
@@ -116,14 +131,14 @@
 
     .first-section div div input::placeholder {
         font-size: 1rem;
-        font-weight: bold;
+        font-weight: light;
     }
 
     .menu-section {
         display: grid;
         grid-template-columns: repeat(2,1fr);
         place-items: center;
-        gap: 15px;
+        gap: 10px;
         margin-top: -2.8rem;
         text-transform: capitalize;
     }
@@ -131,13 +146,14 @@
         display:flex;
         flex-direction: column;
         align-items: center;
+        align-self: stretch;
         justify-content: center;
-        width: 130px;
-        height: 80px;
+        width: 145px;
+        height: 90px;
         background-color: white;
         padding: 2px;
         border-radius: 0.6rem;
-        box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1), 0 4px 6px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.20);
     }
 
     .menu-section div img {
@@ -145,37 +161,64 @@
     }
 
     .menu-section div h2 {
-        font-size: 1rem;
-        margin-top: 5px;
+        color: #000;
+        text-align: center;
+        font-size: 1.1rem;
+        margin-top: 2px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 0.048px;
     }
 
     .third-section {
+        box-shadow: 0px 4px 23px -2px rgba(0,0,0,0.20);
+        -webkit-box-shadow: 0px 4px 23px -2px rgba(0,0,0,0.20);
+        -moz-box-shadow: 0px 4px 23px -2px rgba(0,0,0,0.20);
+        width: 90%;
+        display: flex;
+        height: 180px;
+        padding: 12px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+        flex-shrink: 0;
         margin: 2rem auto;
-        box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1), 0 4px 6px rgba(0, 0, 0, 0.1);
-        width: 92%;
-        padding: 4px;
     }
 
     .third-section div {
         display: flex;
         align-items: center;
-        justify-content: center;
+        gap: 15px;
+        align-self: stretch;
         text-transform: capitalize;
-        margin-bottom: 1rem;
     }
 
     .third-section div img {
         width: 12%;
     }
 
-    .third-section div span {
-        margin-left: 10px;
-        font-size: 0.9rem;
+    .third-section div span h1 {
+        color: #000;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 0.021px;
     }
 
     .third-section div span p {
-        font-size: 0.8rem;
-        font-weight:600;
+        color: #000;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 0.04px;
+    }
+
+    .swiper-div {
+        margin-top: -20px;
     }
 
     /* swiper css */
@@ -211,13 +254,19 @@
         font-size: 1.8rem;
         font-weight: lighter;
         margin-bottom: 1rem;
+        line-height: 120%;
     }
 
     .popular-section .card-div {
-        background-color: rgb(161, 160, 160);
+        display: flex;
+        flex-direction: column;
         width: 180px;
-        padding: 5px;
-        border-radius: 0.3rem;
+        padding: 8px 7px;
+        align-items: center;
+        gap: 10px;
+        flex-shrink: 0;
+        border-radius: var(--radi-md, 4px);
+        background: #D9D9D9;
     }
 
     .popular-section .card-div div {
@@ -226,7 +275,7 @@
 
     .popular-section div .card-image {
         width: 100%;
-        height: 150px;
+        height: 130px;
     }
 
     .popular-section div .logo-image  {
@@ -249,6 +298,8 @@
 
     .card-location-name {
         font-size: 1.3rem;
+        font-style: normal;
+        font-weight: 400;
     }
 
 
@@ -261,16 +312,18 @@
         width: fit-content;
         font-size: 0.8rem;
         text-transform: capitalize;
+        font-weight: 400;
     }
 
     .card-price-div a {
-        margin-top: 1.1rem;
+         margin-top: 1.1rem;
         text-transform: capitalize;
-        padding: 1px;
+        padding: 4px;
+        font-size: 0.8rem; 
         border: none;
         color: white;
-        background-color: red;
-        font-size: 0.8rem;
+        border-radius: 2px;
+        background: #B61C1C;
     }
     /* hotel trending destination starts hert */
     .hotel-grid {
