--- a/style/mobile.css
+++ b/style/mobile.css
@@ -250,7 +250,7 @@
     .popular-section h1 {
         text-transform: capitalize;
         font-size: 1.8rem;
-        font-weight: lighter;
+        font-weight: normal;
         margin-bottom: 1rem;
         line-height: 120%;
     }
@@ -342,14 +342,14 @@
     .trending-des h1:first-of-type {
         text-transform: capitalize;
         font-size: 1.8rem;
-        font-weight: lighter;
+        font-weight: normal;
         margin-top: 1rem;
     }
 
     .trending-des h1:last-of-type {
         text-transform: capitalize;
         font-size: 1.8rem;
-        font-weight: lighter;
+        font-weight: normal;
     }
 
     .trending-des .hotel-pic-div {
@@ -368,6 +368,68 @@
         margin-left: 10px;
         color: white;
         text-transform: capitalize;
+    }
+
+    /* stories card div  */
+
+    .stories {
+        padding: 2px;
+        margin-top: 1rem;
+    }
+
+    .stories h1 {
+        color: #000;
+        text-transform: capitalize;
+        font-size: 1.8rem;
+        margin-bottom: 0.5rem;
+        font-weight: normal;
+        line-height: normal;
+        letter-spacing: 0.03px;
+        border-radius: 0.3rem;
+    }
+
+    .stories-flex {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        overflow-x: scroll;
+    }
+
+    .stories-card-div {
+        width: 194px;
+        height: 208px;
+        flex-shrink: 0;
+        box-shadow: 0px 4px 23px -2px rgba(0,0,0,0.20);
+        -webkit-box-shadow: 0px 4px 23px -2px rgba(0,0,0,0.20);
+        -moz-box-shadow: 0px 4px 23px -2px rgba(0,0,0,0.20);
+    }
+
+    .stories-card-div img {
+        width: 100%;
+        height: 100px;
+        border-radius: 0.3rem 0.3rem 0 0;
+    }
+
+    .stories-card-div-2 {
+        padding: 2px 5px;
+        text-transform: capitalize;
+    }
+
+    .stories-card-div-2 h2 {
+        color: #000;
+        font-size:medium;
+        font-style: normal;
+        font-weight: normal;
+        line-height: 140%; /* 19.6px */
+    }
+
+    .svg-text {
+        display: flex;
+        align-items: center;
+        flex-shrink: 0;
+        gap: 4px;
+        margin-top: 0.5rem;
+        font-weight: 500;
     }
 
 }
