--- a/style/mobile.css
+++ b/style/mobile.css
@@ -328,14 +328,8 @@
         margin-top: 0.6rem;
         display: flex;
         align-items: center;
+        gap: 15px;
         overflow-x: scroll;
-    }
-
-    .hotel-pic-div:first-of-type {
-        margin-left: 0;
-    }
-    .hotel-pic-div {
-        margin-left: 0.5rem;
     }
 
 
@@ -430,6 +424,97 @@
         gap: 4px;
         margin-top: 0.5rem;
         font-weight: 500;
+    }
+
+    /* quick access section */
+
+    .quick-access {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        text-transform: capitalize;
+    }
+
+    .quick-access-grid {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 10px;
+    }
+
+    .quick-access-div {
+        width: 200px;
+    }
+
+    .quick-access-div .img-div {
+        width: fit-content;
+        margin: 1rem auto;
+    }
+
+    .quick-access-inner-div {
+        align-self: stretch;
+    }
+
+    .quick-access-inner-div h2 {
+        color: #000;
+        text-align: center;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        letter-spacing: 0.035px;
+    }
+
+    .quick-access-inner-div p {
+        color: var(--sds-color-text-default-secondary);
+        text-align: center;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 0.048px;
+    }
+
+    /* quick access-section 2 */
+
+    .quick-access-2 {
+        width: 100%;
+        /* height: 211px; */
+        flex-shrink: 0;
+        background: #D9D9D9;
+        padding: 20px 20px;
+    }
+
+    .quick-access-flex-div {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        margin-top: 0.5rem;
+    }
+
+    .quick-access-flex-div h2 {
+        color: #000;
+        text-align: center;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: 0.048px;
+    }
+
+    .quick-access-2 main {
+        align-self: stretch;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        margin-top: 0.3rem;
+        
+    }
+    .quick-access-2 main p{
+        color: #000;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 0.048px;
     }
 
 }
