--- a/style/mobile.css
+++ b/style/mobile.css
@@ -15,6 +15,110 @@
         border: none;
         border-bottom: none;
     }
+
+    /* side bar section */
+
+    #side-bar {
+        position: fixed;
+        z-index: 99;
+        background-color: rgba(0, 0, 0,0.4);
+        width: 100%;
+        height: 100%;
+        display: none;
+    }
+
+    .show-side-bar {
+        display: flex;
+    }
+
+    .hide-side-bar {
+        display: none;
+    }
+
+
+    .main-side-bar {
+        width: 80%;
+        height:99%;
+        background-color: #FFF;
+        padding: 10px 20px;
+    }
+
+    .main-side-bar .icon-cancle {
+        margin-left: 80%;
+        margin-top: 0.8rem;
+    }
+
+    .side-bar-first-section {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        text-transform: capitalize;
+        font-size: 18px;
+        padding-bottom: 1rem;
+    }
+
+    .side-bar-first-section img {
+        width: 10%;
+    }
+
+    .side-bar-first-section p:last-of-type {
+        border-left: 2px solid rgb(75, 70, 70);
+        padding: 1px 6px;
+    }
+
+    .side-bar-second-section {
+        margin-top: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        text-transform: capitalize;
+        padding-top:1.5rem;
+        padding-bottom: 1rem;
+        border-top: 2px solid rgba(121, 111, 111,0.5);
+    }
+
+    .side-bar-second-section span {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .side-bar-third-section {
+        margin-top: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        text-transform: capitalize;
+        padding-top:1.5rem;
+        padding-bottom: 1rem;
+        border-top: 2px solid rgba(121, 111, 111,0.5);
+    }
+
+    .side-bar-third-section span {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+    }
+
+    .side-bar-fourth-section {
+        margin-top: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        text-transform: capitalize;
+        padding-top:1.5rem;
+        padding-bottom: 1rem;
+        border-top: 2px solid rgba(121, 111, 111,0.5);
+    }
+
+    .side-bar-fourth-section span {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    /* end side bar section  */
     
     .header-grid {
         position: relative;
@@ -524,7 +628,7 @@
     /* footer section starts here  */
     footer {
         padding: 20px 20px;
-        width: 90.5%;
+        width: 90.2%;
         background-color: #131313;
         color: #FFF2F2;
     }
@@ -593,8 +697,8 @@
     }
 
     footer main:last-of-type img {
-        width: 36px;
-        height: 36px;
+        width: 34px;
+        height: 34px;
     }
 
     footer h1 {
