--- a/style/mobile.css
+++ b/style/mobile.css
@@ -343,6 +343,10 @@
         justify-content: space-between;
     }
 
+    .popular-section {
+        padding: 10px;
+    }
+
     .popular-section h1 {
         text-transform: capitalize;
         font-size: 1.8rem;
@@ -355,17 +359,17 @@
         display: flex;
         flex-direction: column;
         width: 180px;
-        padding: 8px 7px;
+        height: 221px;
+        padding: 5px 7px;
         align-items: center;
-        gap: 10px;
+        gap: 15px;
         flex-shrink: 0;
-        border-radius: var(--radi-md, 4px);
+        border-radius: 4px;
         background: #D9D9D9;
     }
 
-    .popular-section .card-div div {
-        margin-top: 3px;
-    }
+    /* .popular-section .card-div div {
+    } */
 
     .popular-section div .card-image {
         width: 100%;
@@ -384,16 +388,19 @@
         text-transform: capitalize;
     }
 
+    .best-deals-div p {
+        font-size: 10px;
+    }
+
     .card-location {
         display: flex;
         align-items: center;
-        margin-bottom: 0.5rem;
     }
 
     .card-location-name {
-        font-size: 1.3rem;
+        font-size: 13px;
         font-style: normal;
-        font-weight: 400;
+        font-weight: 500;
     }
 
 
@@ -401,25 +408,41 @@
         display: flex;
         justify-content: space-between;
     }
-
+    
     .card-price-div div {
+        margin-bottom: 0.3rem;
         width: fit-content;
-        font-size: 0.8rem;
         text-transform: capitalize;
         font-weight: 400;
+    }
+
+    .card-price-div div p {
+        font-size: 11px;
+    }
+    
+    .card-price-div div h2 {
+        font-size: 13px;
+        font-weight: 500;
+        padding-top: 3px;
     }
 
     .card-price-div a {
          margin-top: 1.1rem;
         text-transform: capitalize;
         padding: 4px;
-        font-size: 0.8rem; 
-        border: none;
+        font-weight: 400;
+        font-size: 9px; 
+        text-decoration: none;
         color: white;
         border-radius: 2px;
         background: #B61C1C;
     }
     /* hotel trending destination starts hert */
+
+    .trending-des {
+        padding: 10px;
+    }
+
     .hotel-grid {
         margin-top: 0.6rem;
         display: flex;
@@ -452,14 +475,14 @@
     }
 
     .trending-des .hotel-pic-div img {
-        width: 180px;
-        height: 200px;
+        width: 167px;
+        height: 201px;
         border-radius: 0.5rem;
     }
 
     .text-on-img {
         position: absolute;
-        top: 75%;
+        top: 74%;
         margin-left: 10px;
         color: white;
         text-transform: capitalize;
@@ -468,8 +491,9 @@
     /* stories card div  */
 
     .stories {
-        padding: 2px;
+        padding: 10px;
         margin-top: 1rem;
+        margin-bottom: 1rem;
     }
 
     .stories h1 {
@@ -486,8 +510,10 @@
     .stories-flex {
         display: flex;
         align-items: center;
-        gap: 10px;
+        gap: 18px;
         overflow-x: scroll;
+        margin-bottom: 1rem;
+        padding: 5px;
         scrollbar-width: none; /* For Firefox */
     }
 
@@ -496,12 +522,13 @@
       }
 
     .stories-card-div {
-        width: 194px;
-        height: 208px;
+        width: 230px;
+        height: 215px;
         flex-shrink: 0;
         box-shadow: 0px 4px 23px -2px rgba(0,0,0,0.20);
         -webkit-box-shadow: 0px 4px 23px -2px rgba(0,0,0,0.20);
         -moz-box-shadow: 0px 4px 23px -2px rgba(0,0,0,0.20);
+        border-radius: 5px;
     }
 
     .stories-card-div img {
@@ -511,8 +538,9 @@
     }
 
     .stories-card-div-2 {
-        padding: 2px 5px;
+        padding:8px;
         text-transform: capitalize;
+        
     }
 
     .stories-card-div-2 h2 {
@@ -535,7 +563,7 @@
     /* quick access section */
 
     .quick-access {
-        margin-top: 1rem;
+        margin-top: 2rem;
         margin-bottom: 1rem;
         text-transform: capitalize;
     }
@@ -544,6 +572,10 @@
         display: grid;
         grid-template-columns: repeat(2,1fr);
         gap: 10px;
+    }
+
+    .img-div img {
+        background: #FFF2F2;
     }
 
     .quick-access-div {
